<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AA生活记账</string>
    <string name="app_version">3.0.9</string>
    <string name="app_welcome">爱生活，爱记账</string>
    <string name="action_settings">设置</string>
    <string name="action_exits">退出</string>
    <string name="title_activity_main">AA生活记账</string>
    <string name="title_activity_day">每日消费</string>
    <string name="title_activity_day_detail">消费明细</string>
    <string name="title_activity_month">每月消费</string>
    <string name="title_activity_add">添加消费</string>
    <string name="title_activity_edit">编辑消费</string>
    <string name="title_activity_login">注册登录</string>
    <string name="title_activity_category_edit">类别管理</string>
    <string name="title_activity_rank_cat_detail">分类明细</string>
    <string name="title_activity_rank_count_detail">次数明细</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_analyze_recommend">推荐分析</string>
    <string name="title_activity_rank">消费排行</string>
    <string name="title_activity_search">搜索分析</string>
    <string name="title_activity_user_edit">修改资料</string>
    <string name="txt_title_home">AA生活记账</string>
    <string name="txt_title_welcome">用户中心</string>
    <string name="txt_title_login">注册/登录</string>
    <string name="txt_title_useredit">修改</string>
    <string name="txt_title_total">消费统计</string>
    <string name="txt_title_add">添加</string>
    <string name="txt_title_back">返回</string>
    <string name="txt_title_date">日期</string>
    <string name="txt_title_rank">消费排行</string>
    <string name="txt_title_search">搜索</string>
    <string name="txt_tab_day">每日消费</string>
    <string name="txt_tab_day_detail">消费明细</string>
    <string name="txt_tab_month">每月消费</string>
    <string name="txt_tab_rank">消费排行</string>
    <string name="txt_tab_analyze">消费分析</string>
    <string name="txt_tab_add">添加消费</string>
    <string name="txt_tab_edit">编辑消费</string>
    <string name="txt_tab_login">注册登录</string>
    <string name="txt_tab_catedit">类别管理</string>
    <string name="txt_tab_rankcat">分类排行</string>
    <string name="txt_tab_rankcount">次数排行</string>
    <string name="txt_tab_rankprice">单价排行</string>
    <string name="txt_tab_rankdate">日期排行</string>
    <string name="txt_tab_useredit">修改资料</string>
    <string name="txt_tab_rankcatdetail">分类明细</string>
    <string name="txt_tab_rankcountdetail">次数明细</string>
    <string name="txt_tab_settings">设置</string>
    <string name="txt_tab_analyzerecommend">推荐分析</string>
    <string name="txt_lab_username">用户名：</string>
    <string name="txt_lab_group">群&#160;&#160;&#160;&#160;组：</string>
    <string name="txt_lab_status">状态：</string>
    <string name="txt_home_nouser">未设置</string>
    <string name="txt_home_sync">同步</string>
    <string name="txt_home_syncat">同步于</string>
    <string name="txt_home_syncing">数据同步中&#8230;</string>
    <string name="txt_home_hassync">有未同步的数据。</string>
    <string name="txt_home_haswebsync">有未同步的网络数据。</string>
    <string name="txt_home_nosync">没有要同步的数据。</string>
    <string name="txt_home_syncexit">数据同步中不能退出。</string>
    <string name="txt_home_syncerror">数据同步失败！请重试。</string>
    <string name="txt_search_keyempty">搜索关键字不能为空。</string>
    <string name="txt_day_select">选择</string>
    <string name="txt_day_itemname">商品名称</string>
    <string name="txt_day_itemprice">价格</string>
    <string name="txt_day_recommend">推荐</string>
    <string name="txt_day_id">编号</string>
    <string name="txt_day_itembuydate">日期</string>
    <string name="txt_day_totalprice">总价格</string>
    <string name="txt_cat_id">编号</string>
    <string name="txt_cat_name">类别名称</string>
    <string name="txt_cat_display">显示否</string>
    <string name="txt_cat_operate">操作</string>
    <string name="txt_cat_save">保存</string>
    <string name="txt_month_id">编号</string>
    <string name="txt_month_date">日期</string>
    <string name="txt_month_price">总价格</string>
    <string name="txt_month_total">总计</string>
    <string name="txt_rank_id">排名</string>
    <string name="txt_rank_catname">类别名称</string>
    <string name="txt_rank_itemname">商品名称</string>
    <string name="txt_rank_itembuydate">日期</string>
    <string name="txt_rank_count">次数</string>
    <string name="txt_rank_price">总价格</string>
    <string name="txt_rank_itemprice">价格</string>
    <string name="txt_total_label">今日</string>
    <string name="txt_total_price">消费金额</string>
    <string name="txt_day_nav_main">12&#8211;18&#160;&#160;三</string>
    <string name="txt_day_nav_left">12&#8211;17&#160;&#160;二</string>
    <string name="txt_day_nav_right">12&#8211;19&#160;&#160;四</string>
    <string name="txt_day_edit">编辑</string>
    <string name="txt_day_delete">删除</string>
    <string name="txt_day_deletesuccess">删除成功。</string>
    <string name="txt_day_deleteerror">删除失败！</string>
    <string name="txt_day_deleteuse">不能删除使用中的分类！</string>
    <string name="txt_month_nav_main">2013&#8211;12</string>
    <string name="txt_noitem">没有消费记录。</string>
    <string name="txt_nocategory">没有类别记录。</string>
    <string name="txt_add_id">编号</string>
    <string name="txt_add_name">名称</string>
    <string name="txt_add_cattype">商品类别</string>
    <string name="txt_add_itemname">商品名称</string>
    <string name="txt_add_itemprice">商品价格</string>
    <string name="txt_add_itembuydate">购买日期</string>
    <string name="txt_add_addback">添加返回</string>
    <string name="txt_add_addcontinue">添加继续</string>
    <string name="txt_add_adderror">添加失败！</string>
    <string name="txt_add_addsuccess">添加成功。</string>
    <string name="txt_add_smart">智\n能\n添\n加</string>
    <string name="txt_add_smartback">&lt;&lt;&#160;返回</string>
    <string name="txt_edit_editerror">编辑失败！</string>
    <string name="txt_edit_editsuccess">编辑成功。</string>
    <string name="txt_nonull">不能为空。</string>
    <string name="txt_empty">&#160;</string>
    <string name="txt_price">￥</string>
    <string name="txt_newversion">有新版本可以升级。</string>
    <string name="txt_newdowning">新版本下载中&#8230;</string>
    <string name="txt_updateerror">升级失败！</string>
    <string name="txt_user_username">用户名</string>
    <string name="txt_user_userpass">密&#160;&#160;&#160;&#160;码</string>
    <string name="txt_user_nickname">昵&#160;&#160;&#160;&#160;称</string>
    <string name="txt_user_email">邮&#160;&#160;&#160;&#160;箱</string>
    <string name="txt_user_login">登录</string>
    <string name="txt_user_add">注册</string>
    <string name="txt_user_edit">修&#160;&#160;&#160;&#160;改</string>
    <string name="txt_user_loginerror">登录失败！</string>
    <string name="txt_user_loginsuccess">登录成功。</string>
    <string name="txt_user_editerror">资料修改失败！</string>
    <string name="txt_user_editsuccess">资料修改成功。</string>
    <string name="txt_user_loginnote">注意：登录会清除本地所有数据！</string>
    <string name="txt_user_userrepeat">用户名重复！</string>
    <string name="txt_user_userimage">头像</string>
    <string name="txt_user_imagesuccess">头像更新成功。</string>
    <string name="txt_user_imageerror">头像更新失败！</string>
    <string name="txt_tips">提示</string>
    <string name="txt_sure">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_set_lock">登录密锁</string>
    <string name="txt_set_welcome">欢迎文字</string>
    <string name="txt_lock">请输入密匙</string>
    <string name="txt_lock_error">密匙错误</string>
    <string name="txt_lock_go">设置</string>
    <string name="txt_lock_sure">确&#160;&#160;&#160;&#160;定</string>

</resources>
