<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_bg"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <ImageButton
            android:id="@+id/btn_title_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_title_back"
            android:src="@drawable/ic_title_left" />

        <TextView
            android:id="@+id/textView1"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/txt_tab_login" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_empty" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:background="@color/color_item_bg"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_title_welcome"
            android:gravity="center|left"
            android:text="@string/txt_user_username" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:maxLength="12" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_user_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_title_login"
            android:gravity="center|left"
            android:text="@string/txt_user_userpass" />

        <EditText
            android:id="@+id/et_user_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="12" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/btn_user_add"
                style="@style/btn_style_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/main_btn_selector"
                android:drawableLeft="@drawable/ic_user_add"
                android:text="@string/txt_user_add" />

            <Button
                android:id="@+id/btn_user_login"
                style="@style/btn_style_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/main_btn_selector"
                android:drawableLeft="@drawable/ic_lock_go"
                android:text="@string/txt_user_login" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            style="@style/tv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_user_loginnote" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_user_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

</RelativeLayout>
