<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".EditActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <ImageButton
            android:id="@+id/btn_title_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_title_back"
            android:src="@drawable/ic_title_left" />

        <TextView
            android:id="@+id/textView1"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/txt_tab_edit" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_empty" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_item_bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:id="@+id/tv_cattype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_add_dot"
                android:gravity="center|left"
                android:text="@string/txt_add_cattype" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/sp_add_cattype"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_add_catedit" />

                <ImageButton
                    android:id="@+id/btn_add_catedit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/txt_add_cattype"
                    android:src="@drawable/ic_add_catedit" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_itemname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_add_dot"
                android:gravity="center|left"
                android:text="@string/txt_add_itemname" />

            <AutoCompleteTextView
                android:id="@+id/et_add_itemname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textAutoComplete"
                android:completionThreshold="1"
                android:maxLength="20" />

            <TextView
                android:id="@+id/tv_itemprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_add_dot"
                android:gravity="center|left"
                android:text="@string/txt_add_itemprice" />

            <EditText
                android:id="@+id/et_add_itemprice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="10" />

            <TextView
                android:id="@+id/tv_itembuydate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_add_dot"
                android:gravity="center|left"
                android:text="@string/txt_add_itembuydate" />

            <EditText
                android:id="@+id/et_add_itembuydate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <Button
                    android:id="@+id/btn_day_delete"
                    style="@style/btn_style_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_btn_selector"
                    android:drawableLeft="@drawable/ic_add_delete"
                    android:text="@string/txt_day_delete" />

                <Button
                    android:id="@+id/btn_day_edit"
                    style="@style/btn_style_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_btn_selector"
                    android:drawableLeft="@drawable/ic_add_continue"
                    android:text="@string/txt_day_edit" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
