<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_cat_id"
        style="@style/tv_item"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/color_item_bg"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/txt_cat_id" />

    <TextView
        android:id="@+id/tv_cat_name"
        style="@style/tv_item"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="2"
        android:background="@color/color_item_bg"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/txt_cat_name" />

    <LinearLayout
        android:id="@+id/lay_cat_display"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/color_item_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cb_cat_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_cat_operate"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="@color/color_item_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_cat_delete"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/txt_day_delete" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cat_catid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cat_id"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_cat_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cat_id"
        android:visibility="gone" />

</LinearLayout>
